versioned_docs/version-5.3/client-api/data-subscriptions/concurrent-subscriptions.mdx
---
title: "Data Subscriptions: Concurrent Subscriptions"
hide_table_of_contents: true
sidebar_label: Concurrent Subscriptions
sidebar_position: 4
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Data Subscriptions: Concurrent Subscriptions
<Admonition type="note" title="Note">

* With **Concurrent Subscriptions**, multiple data subscription workers 
  are able to connect a common subscription task simultaneously.  
* Different concurrent workers are given different document batches 
  to process.  
* With multiple concurrent workers that process different document 
  batches in parallel, the consumption of a subscription's contents 
  can be greatly accelerated.  
* Documents that were assigned to workers whose connection has ended 
  unexpectedly, can be [reassigned](../../client-api/data-subscriptions/concurrent-subscriptions.mdx#connection-failure) 
  by the server to available workers.  

* In this page:  
   * [Defining a Concurrent Workers](../../client-api/data-subscriptions/concurrent-subscriptions.mdx#defining-concurrent-workers)  
   * [Dropping a Connection](../../client-api/data-subscriptions/concurrent-subscriptions.mdx#dropping-a-connection)  
   * [Connection Failure](../../client-api/data-subscriptions/concurrent-subscriptions.mdx#connection-failure)  

</Admonition>
## Defining Concurrent Workers

Concurrent workers are defined similarly to other workers, except for their 
[strategy](../../client-api/data-subscriptions/consumption/how-to-consume-data-subscription.mdx#worker-interplay) 
that is set as [SubscriptionOpeningStrategy.Concurrent](../../client-api/data-subscriptions/consumption/how-to-consume-data-subscription.mdx#concurrent-strategy).  

* To define a concurrent worker:  
   * Create the worker using [GetSubscriptionWorker](../../client-api/data-subscriptions/consumption/api-overview.mdx#subscription-worker-generation).  
   * Pass it a [SubscriptionWorkerOptions](../../client-api/data-subscriptions/consumption/api-overview.mdx#subscriptionworkeroptions) instance.  
   * Set the strategy to `SubscriptionOpeningStrategy.Concurrent`.  

* Usage:  
   * Define two concurrent workers  
<TabItem value="conSub_defineWorkers" label="conSub_defineWorkers">
<CodeBlock language="csharp">
{`// Define concurrent subscription workers
var subscriptionWorker1 = store.Subscriptions.GetSubscriptionWorker<Order>(
    // Set the worker to connect to the "All Orders" subscription task
    new SubscriptionWorkerOptions("All Orders")
    \{
        // Set Concurrent strategy
        Strategy = SubscriptionOpeningStrategy.Concurrent,
        MaxDocsPerBatch = 20
    \});

var subscriptionWorker2 = store.Subscriptions.GetSubscriptionWorker<Order>(
    new SubscriptionWorkerOptions("All Orders")
    \{
        Strategy = SubscriptionOpeningStrategy.Concurrent,
        MaxDocsPerBatch = 20
    \});
`}
</CodeBlock>
</TabItem>
   * Run both workers  
<TabItem value="conSub_runWorkers" label="conSub_runWorkers">
<CodeBlock language="csharp">
{`// Start the concurrent worker. Workers will connect concurrently to the "All Orders" subscription task.
var subscriptionRuntimeTask1 = subscriptionWorker1.Run(batch =>
\{
    // process batch
    foreach (var item in batch.Items)
    \{
        // process item
    \}
\});

var subscriptionRuntimeTask2 = subscriptionWorker2.Run(batch =>
\{
    // process batch
    foreach (var item in batch.Items)
    \{
        // process item
    \}
\});
`}
</CodeBlock>
</TabItem>




## Dropping a Connection

* Use `Subscriptions.DropSubscriptionWorker` to **forcefully disconnect** 
  any concurrent worker from the subscription it is connected to.  
<TabItem value="csharp" label="csharp">
<CodeBlock language="csharp">
{`public void DropSubscriptionWorker<T>(SubscriptionWorker<T> worker, string database = null)
`}
</CodeBlock>
</TabItem>

* Usage:  
<TabItem value="conSub_dropWorker" label="conSub_dropWorker">
<CodeBlock language="csharp">
{`//drop a concurrent subscription worker
store.Subscriptions.DropSubscriptionWorker(subscriptionWorker2);
`}
</CodeBlock>
</TabItem>




## Connection Failure

* When a concurrent worker's connection ends unexpectedly, the 
  server may assign the documents this worker has been processing 
  to any other concurrent worker that is available.  
* A worker that reconnects after a connection failure will be assigned 
  a **new** batch of documents.  
  It is **not** guaranteed that the new batch will contain the same 
  documents this worker had been processing before disconnecting.  
* It may therefore happen that documents will be processed more 
  than once:  
   - First by a worker that disconnected unexpectedly, without acknowledging the procession of its documents, 
   - and then by workers the documents have been reassigned to.  



